// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should match styles 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 1.3333333333333333;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #666c76;
  display: inline;
  margin: 0;
  margin: 0 0.4rem 0.4rem 0;
}

<div>
  <div
    class="emotion-0"
  >
    hello
  </div>
</div>
`;

exports[`Tag should not output styles when unstyled is set 1`] = `
<div>
  <div
    class="emotion-0"
  >
    hello
  </div>
</div>
`;

exports[`Tag shouldn't have a margin when \`noMargin\` is true 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 1.3333333333333333;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #666c76;
  display: inline;
  margin: 0;
}

<div
  class="emotion-0"
>
  Hello
</div>
`;
